# PromptScope

./: .env.example  .gitignore  ACL_GUIDE.md  ARCHITECTURE_FIXES.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  UI_REDESIGN.md  demo.md  pyproject.toml  requirements.txt  run.py  verify.py  verify_tools.py
demo/: __init__.py  run.py
demo/api/: __init__.py  seed_data.py  server.py
demo/ui/: __init__.py
demo/ui/static/: app.js
docs/: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  OLLAMA_NOTES.md
src/promptscope/: __init__.py  exceptions.py  session.py  types.py
src/promptscope/api/: models.py  seed_data.py  server.py
src/promptscope/core/: __init__.py  conversation.py  events.py  llm_client.py  llm_types.py  projection.py  prompt_builder.py  retrieval.py  retrieval_tools.py  tool_definitions.py
src/promptscope/core/acl/: __init__.py  evaluator.py  models.py  store.py
src/promptscope/ui/: __init__.py
src/promptscope/ui/static/: app.js  index.html  style.css
